Use correct naming for Subversion and Git
GIT => Git
SVN => Subversion

git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@1642145 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report_es.properties
+++ b/src/main/resources/project-info-report_es.properties
@@ -156,7 +156,7 @@ report.scm.accessthroughtproxy.svn.intro3                          = Ejemplo: Ed
 report.scm.accessthroughtproxy.title                               = Acceso a trav\u00e9s de un proxy
 report.scm.anonymousaccess.cvs.intro                               = El repositorio CVS de este proyecto puede ser accedido a trav\u00e9s de CVS an\u00f3nimo con el siguiente conjunto de instrucciones. Cuando se le pregunte por una contrase\u00f1a, simplemente presione la tecla Entrar.
 report.scm.anonymousaccess.general.intro                           = Lo referimos a la documentaci\u00f3n de su SCM utilizado para m\u00e1s informaci\u00f3n sobre descargar an\u00f3nimamente. La URL de conexi\u00f3n es:
-report.scm.anonymousaccess.svn.intro                               = Los fuentes pueden ser descargados an\u00f3nimamente desde SVN con este comando:
+report.scm.anonymousaccess.svn.intro                               = Los fuentes pueden ser descargados an\u00f3nimamente desde Subversion con este comando:
 report.scm.anonymousaccess.title                                   = Acceso an\u00f3nimo
 report.scm.clearcase.intro                                         = Este proyecto usa {ClearCase, http://www-306.ibm.com/software/awdtools/clearcase/} para gestionar su c\u00f3digo fuente. Informaci\u00f3n sobre ClearCase puede encontrarse en {http://www.redbooks.ibm.com/redbooks/pdfs/sg246399.pdf, http://www.redbooks.ibm.com/redbooks/pdfs/sg246399.pdf}.
 report.scm.cvs.intro                                               = Este proyecto usa {Concurrent Versions System, http://www.cvshome.org/} para gestionar su c\u00f3digo fuente. Informaci\u00f3n sobre el uso de CVS puede encontrarse en {http://cvsbook.red-bean.com/, http://cvsbook.red-bean.com/}.
