--- a/src/main/resources/project-info-report_fr.properties
+++ b/src/main/resources/project-info-report_fr.properties
@@ -157,7 +157,7 @@ report.scm.accessthroughtproxy.svn.intro3                          = Exemple : E
 report.scm.accessthroughtproxy.title                               = Acc\u00e8s avec un proxy
 report.scm.anonymousaccess.cvs.intro                               = Le d\u00e9p\u00f4t d'archive CVS de ce projet peut \u00eatre consult\u00e9 de fa\u00e7on anonyme avec les instructions suivantes. Lorsqu'un mot de passe pour anonyme est demand\u00e9, appuyez simplement sur la touche Enter.
 report.scm.anonymousaccess.general.intro                           = R\u00e9f\u00e9rez-vous \u00e0 la documentation du d\u00e9p\u00f4t d'archive utilis\u00e9 pour plus d'informations sur l'acc\u00e8s anonyme. L'URL de connection est :
-report.scm.anonymousaccess.svn.intro                               = Le d\u00e9p\u00f4t d'archive SVN de ce projet peut \u00eatre consult\u00e9 de fa\u00e7on anonyme avec les instructions suivantes :
+report.scm.anonymousaccess.svn.intro                               = Le d\u00e9p\u00f4t d'archive Subversion de ce projet peut \u00eatre consult\u00e9 de fa\u00e7on anonyme avec les instructions suivantes :
 report.scm.anonymousaccess.title                                   = Acc\u00e8s de fa\u00e7on anonyme
 report.scm.clearcase.intro                                         = Ce projet utilise {ClearCase, http://www-306.ibm.com/software/awdtools/clearcase/} comme d\u00e9p\u00f4t de sources pour g\u00e9rer son code source.
 report.scm.cvs.intro                                               = Ce projet utilise {Concurrent Versions System, http://www.cvshome.org/} pour g\u00e9rer son code source. Des instructions sur l''utilisation de CVS peuvent \u00eatre trouv\u00e9es sur {http://cvsbook.red-bean.com/, http://cvsbook.red-bean.com/}.
