--- a/src/main/resources/project-info-report_no.properties
+++ b/src/main/resources/project-info-report_no.properties
@@ -121,7 +121,7 @@ report.scm.accessthroughtproxy.svn.intro3                          = Eksempel: R
 report.scm.accessthroughtproxy.title                               = Tilgang gjennom en proxy
 report.scm.anonymousaccess.cvs.intro                               = Dette prosjektets CVS repository kan sjekkes ut gjennom anonym CVS med f\u00F8lgende instruksjoner. N\u00E5r spurt om passord for anonymous, trykk bare p\u00E5 retur tasten.
 report.scm.anonymousaccess.general.intro                           = Sjekk dokumentasjonen for versjonshandterings systemer som brukes for mer informasjon om anonym utsjeking. Aksess url er:
-report.scm.anonymousaccess.svn.intro                               = Kildekoden kan sjekkes ut anonymt fra SVN med f\u00F8lgende kommando:
+report.scm.anonymousaccess.svn.intro                               = Kildekoden kan sjekkes ut anonymt fra Subversion med f\u00F8lgende kommando:
 report.scm.anonymousaccess.title                                   = Anonym aksess
 report.scm.clearcase.intro                                         = Dette prosjekter bruker {ClearCase, http://www-306.ibm.com/software/awdtools/clearcase/} for \u00E5 handtere kildekoden. Informasjon om CLearCase finnes p\u00E5 {http://www.redbooks.ibm.com/redbooks/pdfs/sg246399.pdf, http://www.redbooks.ibm.com/redbooks/pdfs/sg246399.pdf}.
 report.scm.cvs.intro                                               = Dette prosjektet bruker {Concurrent Versions System, http://www.cvshome.org/} for \u00E5 handtere kildekoden. Instruksjoner om CVS finnes p\u00E5 {http://cvsbook.red-bean.com/, http://cvsbook.red-bean.com/}.
