--- a/src/main/resources/project-info-report_tr.properties
+++ b/src/main/resources/project-info-report_tr.properties
@@ -141,7 +141,7 @@ report.scm.accessthroughtproxy.svn.intro3                          = Example: Ed
 report.scm.accessthroughtproxy.title                               = Access through a proxy
 report.scm.anonymousaccess.cvs.intro                               = This project's CVS repository can be checked out through anonymous CVS with the following instruction set. When prompted for a password for anonymous, simply press the Enter key.
 report.scm.anonymousaccess.general.intro                           = Refer to the documentation of the SCM used for more information about anonymously check out. The connection url is:
-report.scm.anonymousaccess.svn.intro                               = The source can be checked out anonymously from SVN with this command:
+report.scm.anonymousaccess.svn.intro                               = The source can be checked out anonymously from Subversion with this command:
 report.scm.anonymousaccess.title                                   = Anonymous access
 report.scm.clearcase.intro                                         = This project uses {ClearCase, http://www-306.ibm.com/software/awdtools/clearcase/} to manage its source code. Informations on ClearCase use can be found at {http://www.redbooks.ibm.com/redbooks/pdfs/sg246399.pdf, http://www.redbooks.ibm.com/redbooks/pdfs/sg246399.pdf}.
 report.scm.cvs.intro                                               = This project uses {Concurrent Versions System, http://www.cvshome.org/} to manage its source code. Instructions on CVS use can be found at {http://cvsbook.red-bean.com/, http://cvsbook.red-bean.com/}.
