[MPIR-310] Improve 'JDK Rev' label in dependencies report
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@1642371 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report_de.properties
+++ b/src/main/resources/project-info-report_de.properties
@@ -57,7 +57,7 @@ report.dependencies.file.details.column.classes                    = Klassen
 report.dependencies.file.details.column.debuginformation           = Debug-Informationen
 report.dependencies.file.details.column.entries                    = Eintr\u00e4ge
 report.dependencies.file.details.column.file                       = Dateiname
-report.dependencies.file.details.column.jdkrev                     = JRE
+report.dependencies.file.details.column.javaVersion                = Java-Version
 report.dependencies.file.details.column.packages                   = Pakete
 report.dependencies.file.details.column.sealed                     = Versiegelt
 report.dependencies.file.details.column.size                       = Gr\u00f6sse
