--- a/src/main/resources/project-info-report_es.properties
+++ b/src/main/resources/project-info-report_es.properties
@@ -56,7 +56,7 @@ report.dependencies.file.details.cell.debuginformation.no          = No
 report.dependencies.file.details.column.classes                    = Clases
 report.dependencies.file.details.column.entries                    = Entries
 report.dependencies.file.details.column.file                       = Fichero
-report.dependencies.file.details.column.jdkrev                     = JDK Rev
+report.dependencies.file.details.column.javaVersion                = Versi\u00f3n de Java
 report.dependencies.file.details.column.packages                   = Packages
 report.dependencies.file.details.column.sealed                     = Sealed
 report.dependencies.file.details.column.size                       = Tama\u00f1o
