--- a/src/main/resources/project-info-report_fr.properties
+++ b/src/main/resources/project-info-report_fr.properties
@@ -56,7 +56,7 @@ report.dependencies.file.details.cell.debuginformation.no          = Non
 report.dependencies.file.details.column.classes                    = Classes
 report.dependencies.file.details.column.entries                    = Entr\u00e9es
 report.dependencies.file.details.column.file                       = Nom du fichier
-report.dependencies.file.details.column.jdkrev                     = R\u00e9vision du JDK
+report.dependencies.file.details.column.javaVersion                = Version du Java
 report.dependencies.file.details.column.packages                   = Packages
 report.dependencies.file.details.column.sealed                     = Scell\u00e9
 report.dependencies.file.details.column.size                       = Taille
