[MPMD-280] Clarify that Web Access SCM link is not suitable for SCM checkout
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@1643618 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report_de.properties
+++ b/src/main/resources/project-info-report_de.properties
@@ -189,9 +189,9 @@ report.scm.perforce.intro                                          = Dieses Proj
 report.scm.starteam.intro                                          = Dieses Projekt verwendet {Starteam, http://www.borland.com/us/products/starteam/} um seinen Quellcode zu verwalten.
 report.scm.svn.intro                                               = Dieses Projekt verwendet {Subversion, http://subversion.apache.org/} um seinen Quellcode zu verwalten. Informationen \u00fcber Subversion finden Sie unter: {http://svnbook.red-bean.com/, http://svnbook.red-bean.com/}.
 report.scm.title                                                   = Versionskontrolle
-report.scm.webaccess.nourl                                         = Es wurde kein Web-Portal f\u00fcr das Quellcode-Archiv eingerichtet.
-report.scm.webaccess.title                                         = Web-Zugang
-report.scm.webaccess.url                                           = Es folgt ein Verweis auf das Web-Portal des Quellcode-Archivs dieses Projektes.
+report.scm.webaccess.nourl                                         = Es wurde keine navigierbare Version des Quellcode-Archivs eingerichtet.
+report.scm.webaccess.title                                         = Web-Browser-Zugang
+report.scm.webaccess.url                                           = Es folgt ein Verweis auf eine navigierbare Version des Quellcode-Archivs dieses Projektes.
 report.summary.build.artifactid                                    = ArtifactId
 report.summary.build.groupid                                       = GroupId
 report.summary.build.javaVersion                                   = Java-Version
