--- a/src/main/resources/project-info-report_de.properties
+++ b/src/main/resources/project-info-report_de.properties
@@ -257,6 +257,7 @@ report.dependencyManagement.intro.provided                         = Es folgt ei
 report.dependencyManagement.intro.runtime                          = Es folgt eine Liste der Laufzeitabh\u00e4ngigkeiten dieses Projektes, die durch Dependency-Management kontrolliert werden:
 report.dependencyManagement.intro.system                           = Es folgt eine Liste der Systemabh\u00e4ngigkeiten dieses Projektes, die durch Dependency-Management kontrolliert werden:
 report.dependencyManagement.intro.test                             = Es folgt eine Liste der Testabh\u00e4ngigkeiten dieses Projektes, die durch Dependency-Management kontrolliert werden:
+report.pluginManagement.nolist                                     = F\u00fcr dieses Projekt sind keine Plugins zur Verwaltung definiert.
 report.pluginManagement.name                                       = Plugin-Management
 report.pluginManagement.description                                = Informationen \u00fcber die verwalteten Plugins.
 report.pluginManagement.title                                      = Plugin-Management
@@ -266,6 +267,7 @@ report.plugins.title                                               = Build-Plugi
 report.plugins.report.title                                        = Report-Plugins
 report.plugins.nolist                                              = F\u00fcr dieses Projekt sind keine Build-Plugins definiert.
 report.plugins.report.nolist                                       = F\u00fcr dieses Projekt sind keine Report-Plugins definiert.
+report.modules.nolist                                              = F\u00fcr dieses Projekt sind keine Module definiert.
 report.modules.name                                                = Projekt Module
 report.modules.description                                         = Informationen \u00fcber die Module (Unter-Projekte) dieses Projektes.
 report.modules.title                                               = Projekt Module
