Added localization strings for verbatim copy of a URL-based license
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@1643943 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report_de.properties
+++ b/src/main/resources/project-info-report_de.properties
@@ -140,6 +140,8 @@ report.license.name                                                = Projektlize
 report.license.nolicense                                           = Es wurde keine Lizenz f\u00fcr dieses Projekt definiert.
 report.license.overview.intro                                      = Die aufgelisteten Lizenzen beziehen sich typischerweise nur auf das Projekt selbst, nicht auf seine Abh\u00e4ngigkeiten.
 report.license.overview.title                                      = \u00dcbersicht
+report.license.originalText                                        = [Originaltext]
+report.license.copy                                                = Nachfolgend ist eine Kopie der Lizenz zu sehen:
 report.license.title                                               = Projektlizenz
 report.mailing-lists.column.archive                                = Archiv
 report.mailing-lists.column.name                                   = Name
