[MPIR-313] License name is mandatory but it is not validated
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@1644770 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report_cs.properties
+++ b/src/main/resources/project-info-report_cs.properties
@@ -135,6 +135,7 @@ report.license.nolicense                                           = Tento proje
 report.license.overview.intro                                      = Obvykle jsou uveden\u00e9 licence licencemi projektu samotn\u00e9ho a nikoliv z\u00e1vislost\u00ed.
 report.license.overview.title                                      = Souhrn
 report.license.title                                               = Licence projektu
+report.license.unnamed                                             = Nepojmenovan\u00fd
 report.mailing-lists.column.archive                                = Archiv
 report.mailing-lists.column.name                                   = N\u00e1zev
 report.mailing-lists.column.otherArchives                          = Jin\u00e9 archivy
