--- a/src/main/resources/project-info-report_de.properties
+++ b/src/main/resources/project-info-report_de.properties
@@ -143,6 +143,7 @@ report.license.overview.title                                      = \u00dcbersi
 report.license.originalText                                        = [Originaltext]
 report.license.copy                                                = Nachfolgend ist eine Kopie der Lizenz zu sehen:
 report.license.title                                               = Projektlizenz
+report.license.unnamed                                             = Unbenannt
 report.mailing-lists.column.archive                                = Archiv
 report.mailing-lists.column.name                                   = Name
 report.mailing-lists.column.otherArchives                          = Andere Archive
