--- a/src/main/resources/project-info-report_es.properties
+++ b/src/main/resources/project-info-report_es.properties
@@ -135,6 +135,7 @@ report.license.nolicense                                           = No hay ning
 report.license.overview.intro                                      = Normalmente, la licencia indicada para el proyecto es para el propio proyecto y no para sus dependencias.
 report.license.overview.title                                      = Resumen
 report.license.title                                               = Licencia del Proyecto
+report.license.unnamed                                             = Sin nombre
 report.mailing-lists.column.archive                                = Archivo
 report.mailing-lists.column.name                                   = Nombre
 report.mailing-lists.column.otherArchives                          = Otros Archivos
