--- a/src/main/resources/project-info-report_fr.properties
+++ b/src/main/resources/project-info-report_fr.properties
@@ -136,6 +136,7 @@ report.license.nolicense                                           = Aucune lice
 report.license.overview.intro                                      = Typiquement les licences \u00e9num\u00e9r\u00e9s pour ce projet sont celles du projet lui-m\u00eame, et non celles des d\u00e9pendances.
 report.license.overview.title                                      = Vue d'ensemble
 report.license.title                                               = Licence du projet
+report.license.unnamed                                             = Non-sp\u00e9cifi\u00e9
 report.mailing-lists.column.archive                                = Archive
 report.mailing-lists.column.name                                   = Nom
 report.mailing-lists.column.otherArchives                          = Autres Archives
