--- a/src/main/resources/project-info-report_gl.properties
+++ b/src/main/resources/project-info-report_gl.properties
@@ -125,6 +125,7 @@ report.license.nolicense                                           = Non hai nin
 report.license.overview.intro                                      = Normalmente, a licenza indicada para o proxecto \u00E9 para o propio proxecto e non para as s\u00FAas dependencias.
 report.license.overview.title                                      = Resumo
 report.license.title                                               = Licenza do Proxecto
+report.license.unnamed                                             = Sen nome
 report.mailing-lists.column.archive                                = Arquivo
 report.mailing-lists.column.name                                   = Nome
 report.mailing-lists.column.otherArchives                          = Outros Arquivos
