--- a/src/main/resources/project-info-report_ko.properties
+++ b/src/main/resources/project-info-report_ko.properties
@@ -119,6 +119,7 @@ report.license.nolicense                                           = \uc774 \ud5
 report.license.overview.intro                                      = \uc77c\ubc18\uc801\uc73c\ub85c \uc774 \ud504\ub85c\uc81d\ud2b8\uc758 \ub77c\uc774\uc13c\uc2a4\ub4e4\uc740 \uc774 \ud504\ub85c\uc81d\ud2b8 \uc790\uccb4\ub97c \uc704\ud55c \uac83\ub4e4\uc774\uba70, \uc758\uc874\ubb3c\ub4e4\uc5d0 \ub300\ud55c \ub77c\uc774\uc13c\uc2a4\ub4e4\uc774 \uc544\ub2d9\ub2c8\ub2e4.
 report.license.overview.title                                      = \uac1c\uc694
 report.license.title                                               = \ud504\ub85c\uc81d\ud2b8 \ub77c\uc774\uc13c\uc2a4
+report.license.unnamed                                             = \uba85\uba85 \uc548\ub428
 report.mailing-lists.column.archive                                = \uc544\uce74\uc774\ube0c
 report.mailing-lists.column.name                                   = \uc774\ub984
 report.mailing-lists.column.otherArchives                          = \uae30\ud0c0 \uc544\uce74\uc774\ube0c
