--- a/src/main/resources/project-info-report_lt.properties
+++ b/src/main/resources/project-info-report_lt.properties
@@ -128,6 +128,7 @@ report.license.nolicense                                           = Projektas n
 report.license.overview.intro                                      = Bendru atveju \u017eemiau pateiktos licenzijos yra pa\u010dio projekto, o ne jo naudojam\u0173 bibliotek\u0173
 report.license.overview.title                                      = \u012evadas
 report.license.title                                               = Projekto licenzija
+report.license.unnamed                                             = Be pavadinimo
 report.mailing-lists.column.archive                                = Archyvas
 report.mailing-lists.column.name                                   = Vardas
 report.mailing-lists.column.otherArchives                          = Kiti archyvai
