--- a/src/main/resources/project-info-report_pt_BR.properties
+++ b/src/main/resources/project-info-report_pt_BR.properties
@@ -161,6 +161,7 @@ report.license.nolicense                                           = N\u00e3o fo
 report.license.overview.intro                                      = Tipicamente a licen\u00e7a apresentada para o projeto \u00e9 somente para o projeto, e n\u00e3o para as depend\u00eancias.
 report.license.overview.title                                      = Vis\u00e3o Geral
 report.license.title                                               = Licen\u00e7a do Projeto
+report.license.unnamed                                             = Sem nome
 report.mailing-lists.column.archive                                = Hist\u00f3rico
 report.mailing-lists.column.name                                   = Nome
 report.mailing-lists.column.otherArchives                          = Hist\u00f3rico mais antigo
