--- a/src/main/resources/project-info-report_sv.properties
+++ b/src/main/resources/project-info-report_sv.properties
@@ -132,6 +132,7 @@ report.license.nolicense                                           = Det finns i
 report.license.overview.intro                                      = Vanligtvis \u00e4r licenserna som listas f\u00f6r projektet bara licenser f\u00f6r sj\u00e4lva projektet, och inte f\u00f6r projektets beroenden.
 report.license.overview.title                                      = \u00d6versikt
 report.license.title                                               = Projektlicens
+report.license.unnamed                                             = Namnl\u00f6s
 report.mailing-lists.column.archive                                = Arkiv
 report.mailing-lists.column.name                                   = Namn
 report.mailing-lists.column.otherArchives                          = \u00d6vriga arkiv
