--- a/src/main/resources/project-info-report_zh_CN.properties
+++ b/src/main/resources/project-info-report_zh_CN.properties
@@ -119,6 +119,7 @@ report.license.nolicense                                           = \u672C\u987
 report.license.overview.intro                                      = \u4E00\u822C\u6765\u8BF4\uFF0C\u9879\u76EE\u4E2D\u6240\u5217\u7684\u6388\u6743\u4EC5\u5BF9\u9879\u76EE\u81EA\u8EAB\u800C\u8A00\uFF0C\u4E0D\u5305\u62EC\u9879\u76EE\u7684\u4F9D\u8D56\u3002
 report.license.overview.title                                      = \u6982\u8FF0
 report.license.title                                               = \u9879\u76EE\u6388\u6743
+report.license.unnamed                                             = \u672A\u547D\u540D
 report.mailing-lists.column.archive                                = \u5F52\u6863
 report.mailing-lists.column.name                                   = \u540D\u79F0
 report.mailing-lists.column.otherArchives                          = \u5176\u4ED6\u5F52\u6863
