--- a/src/main/resources/project-info-report_zh_TW.properties
+++ b/src/main/resources/project-info-report_zh_TW.properties
@@ -128,6 +128,7 @@ report.license.nolicense                                           = \u672c\u5c0
 report.license.overview.intro                                      = \u4e00\u822c\u4f86\u8aaa\uff0c\u5c08\u6848\u6240\u5217\u7684\u6388\u6b0a\u8a31\u53ef\u53ea\u5c0d\u5176\u81ea\u8eab\u6709\u5f71\u97ff\uff0c\u800c\u4e0d\u6d89\u53ca\u5c08\u6848\u7684\u4f9d\u8cf4\u3002
 report.license.overview.title                                      = \u6982\u8981 (Overview)
 report.license.title                                               = \u5c08\u6848\u6388\u6b0a\u8a31\u53ef (Project License)
+report.license.unnamed                                             = \u672a\u547d\u540d
 report.mailing-lists.column.archive                                = \u6b78\u6a94 (Archive)
 report.mailing-lists.column.name                                   = \u540d\u7a31 (Name)
 report.mailing-lists.column.otherArchives                          = \u5176\u5b83\u6b78\u6a94 (Other Archives)
