--- a/src/main/resources/project-info-report_pt.properties
+++ b/src/main/resources/project-info-report_pt.properties
@@ -130,6 +130,7 @@ report.license.nolicense                                           = N\u00e3o fo
 report.license.overview.intro                                      = Tipicamente a licen\u00e7a apresentada para o projecto \u00e9 somente para o projecto e n\u00e3o para as suas depend\u00eancias.
 report.license.overview.title                                      = Vis\u00e3o Geral
 report.license.title                                               = Licen\u00e7a do Projecto
+report.license.unnamed                                             = Sem nome
 report.mailing-lists.column.archive                                = Hist\u00f3rico
 report.mailing-lists.column.name                                   = Nome
 report.mailing-lists.column.otherArchives                          = Hist\u00f3rico anterior
