--- a/src/main/resources/project-info-report_ru.properties
+++ b/src/main/resources/project-info-report_ru.properties
@@ -130,6 +130,7 @@ report.license.nolicense                                           = \u042d\u044
 report.license.overview.intro                                      = \u041e\u0431\u044b\u0447\u043d\u043e, \u043b\u0438\u0446\u0435\u043d\u0437\u0438\u0438 \u043a\u043e\u0442\u043e\u0440\u044b\u0435 \u043c\u043e\u0436\u043d\u043e \u043d\u0430\u0439\u0442\u0438 \u043d\u0430 \u0441\u0430\u0439\u0442\u0435 \u043f\u0440\u043e\u0435\u043a\u0442\u0430 \u043e\u0442\u043d\u043e\u0441\u044f\u0442\u0441\u044f \u043a \u0441\u0430\u043c\u043e\u043c\u0443 \u043f\u0440\u043e\u0435\u043a\u0442\u0443 \u0430 \u043d\u0435 \u043a \u0435\u0433\u043e \u0437\u0430\u0432\u0438\u0441\u0438\u043c\u043e\u0441\u0442\u044f\u043c.
 report.license.overview.title                                      = \u041e\u0431\u0437\u043e\u0440
 report.license.title                                               = \u041b\u0438\u0446\u0435\u043d\u0437\u0438\u044f \u041f\u0440\u043e\u0435\u043a\u0442\u0430
+report.license.unnamed                                             = \u041d\u0435\u0438\u0437\u0432\u0435\u0441\u0442\u043d\u0430\u044f
 report.mailing-lists.column.archive                                = \u0410\u0440\u0445\u0438\u0432
 report.mailing-lists.column.name                                   = \u041d\u0430\u0437\u0432\u0430\u043d\u0438\u0435
 report.mailing-lists.column.otherArchives                          = \u0414\u0440\u0443\u0433\u0438\u0435 \u0410\u0440\u0445\u0438\u0432\u044b
