--- a/src/main/resources/project-info-report_de.properties
+++ b/src/main/resources/project-info-report_de.properties
@@ -93,7 +93,7 @@ report.dependencies.repo.locations.column.snapshot                 = Snapshots
 report.dependencies.repo.locations.column.url                      = URL
 report.dependencies.repo.locations.title                           = Archiv-Orte der Abh\u00e4ngigkeiten
 report.dependencies.title                                          = Abh\u00e4ngigkeiten
-report.dependencies.unamed                                         = Namenlos
+report.dependencies.unnamed                                        = Unbenannt
 report.dependencies.transitive.intro                               = Es folgen die transitiven Abh\u00e4ngigkeiten dieses Projektes. Transitive Abh\u00e4ngigkeiten sind Abh\u00e4ngigkeiten der Projektabh\u00e4ngigkeiten:
 report.dependencies.transitive.nolist                              = Dieses Projekt hat keine transitiven Abh\u00e4ngigkeiten.
 report.dependencies.transitive.title                               = Transitive Abh\u00e4ngigkeiten dieses Projektes
