--- a/src/main/resources/project-info-report_es.properties
+++ b/src/main/resources/project-info-report_es.properties
@@ -91,7 +91,7 @@ report.dependencies.repo.locations.column.snapshot                 = Snapshot
 report.dependencies.repo.locations.column.url                      = URL
 report.dependencies.repo.locations.title                           = Localizaci\u00f3n de los repositorios
 report.dependencies.title                                          = Dependencias del proyecto
-report.dependencies.unamed                                         = Sin nombre
+report.dependencies.unnamed                                        = Sin nombre
 report.dependencies.transitive.intro                               = Esta es una lista de dependencias transitvas para el proyecto. Las dependencias transitivas son dependencieas de las dependencias del proyecto.
 report.dependencies.transitive.nolist                              = No son necesarias dependencias transitivas en este proyecto.
 report.dependencies.transitive.title                               = Dependencias Transitivas del Proyecto
