--- a/src/main/resources/project-info-report_fr.properties
+++ b/src/main/resources/project-info-report_fr.properties
@@ -91,7 +91,7 @@ report.dependencies.repo.locations.column.snapshot                 = Snapshot
 report.dependencies.repo.locations.column.url                      = URL
 report.dependencies.repo.locations.title                           = Localisation du r\u00e9f\u00e9rentiel des d\u00e9pendances
 report.dependencies.title                                          = D\u00e9pendances du projet
-report.dependencies.unamed                                         = Non-sp\u00e9cifi\u00e9
+report.dependencies.unnamed                                        = Non-sp\u00e9cifi\u00e9
 report.dependencies.transitive.intro                               = Ce qui suit est la liste des d\u00e9pendances transitives pour ce projet. Les d\u00e9pendances transitives sont les d\u00e9pendances des d\u00e9pendances du projet :
 report.dependencies.transitive.nolist                              = Il n'y a aucune d\u00e9pendance transitive pour ce projet.
 report.dependencies.transitive.title                               = D\u00e9pendances transitives du projet
