--- a/src/main/resources/project-info-report_gl.properties
+++ b/src/main/resources/project-info-report_gl.properties
@@ -87,7 +87,7 @@ report.dependencies.repo.locations.column.snapshot                 = Snapshot
 report.dependencies.repo.locations.column.url                      = URL
 report.dependencies.repo.locations.title                           = Localizaci\u00f3n dos repositorios
 report.dependencies.title                                          = Dependencias do proxecto
-report.dependencies.unamed                                         = Sen nome
+report.dependencies.unnamed                                        = Sen nome
 report.dependency-convergence.convergence.caption                  = Dependencias usadas en subproxectos
 report.dependency-convergence.description                          = Este documento presenta a converxencia das versi\u00F3ns das dependencias en todo o proxecto e os seus subm\u00f3dulos.
 report.dependency-convergence.legend                               = Lenda:
