--- a/src/main/resources/project-info-report_lt.properties
+++ b/src/main/resources/project-info-report_lt.properties
@@ -87,7 +87,7 @@ report.dependencies.repo.locations.column.snapshot                 = Snapshot
 report.dependencies.repo.locations.column.url                      = URL
 report.dependencies.repo.locations.title                           = Priklausomybi\u0173 saugykl\u0173 vietos
 report.dependencies.title                                          = Projekto bibliotekos
-report.dependencies.unamed                                         = Be pavadinimo
+report.dependencies.unnamed                                        = Be pavadinimo
 report.dependencies.transitive.intro                               = \u0160io projekto tranzitin\u0117s priklausomyb\u0117s. Tranzitin\u0117s priklausomyb\u0117s yra priklausomyb\u0117s reikalingos \u0161iame projekte naudojamoms bibliotekoms.
 report.dependencies.transitive.nolist                              = N\u0117ra tranzityvini\u0173 priklausomybi\u0173.
 report.dependencies.transitive.title                               = Projekto tranzityvin\u0117s priklausomyb\u0117s
