--- a/src/main/resources/project-info-report_pt.properties
+++ b/src/main/resources/project-info-report_pt.properties
@@ -89,7 +89,7 @@ report.dependencies.repo.locations.column.snapshot                 = Snapshot
 report.dependencies.repo.locations.column.url                      = URL
 report.dependencies.repo.locations.title                           = Localiza\u00e7\u00f5es dos Reposit\u00f3rios de Depend\u00eancias
 report.dependencies.title                                          = Depend\u00eancias do Projecto
-report.dependencies.unamed                                         = Sem nome
+report.dependencies.unnamed                                        = Sem nome
 report.dependencies.transitive.intro                               = Esta \u00e9 a lista das depend\u00eancias transitivas deste projecto. Uma depend\u00eancia transitiva \u00e9 uma depend\u00eancia das depend\u00eancias do projecto:
 report.dependencies.transitive.nolist                              = Este projecto n\u00e3o tem nenhuma depend\u00eancia transitiva.
 report.dependencies.transitive.title                               = Depend\u00eancias Transitivas do Projecto
