--- a/src/main/resources/project-info-report_pt_BR.properties
+++ b/src/main/resources/project-info-report_pt_BR.properties
@@ -91,7 +91,7 @@ report.dependencies.title                                          = Depend\u00e
 report.dependencies.transitive.intro                               = Esta \u00e9 a lista das depend\u00eancias transitivas deste projeto. Uma depend\u00eancia transitiva \u00e9 uma depend\u00eancia das depend\u00eancias do projeto:
 report.dependencies.transitive.nolist                              = Este projeto n\u00e3o tem nenhum depend\u00eancia transitiva
 report.dependencies.transitive.title                               = Depend\u00eancias Transitivas do Projeto
-report.dependencies.unamed                                         = Sem nome
+report.dependencies.unnamed                                        = Sem nome
 report.dependency-convergence.convergence.caption                  = Depend\u00eancias utilizadas em subprojetos
 report.dependency-convergence.description                          = Este documento apresenta a converg\u00eancia das vers\u00f5es dentro do projeto e seus subm\u00f3dulos.
 report.dependency-convergence.legend                               = Legenda:
