--- a/src/main/resources/project-info-report_ru.properties
+++ b/src/main/resources/project-info-report_ru.properties
@@ -89,7 +89,7 @@ report.dependencies.repo.locations.column.snapshot                 = Snapshot
 report.dependencies.repo.locations.column.url                      = \u041b\u0438\u043d\u043a
 report.dependencies.repo.locations.title                           = \u0425\u0440\u0430\u043d\u0438\u043b\u0438\u0449\u0430 \u0417\u0430\u0432\u0438\u0441\u0438\u043c\u043e\u0441\u0442\u0435\u0439
 report.dependencies.title                                          = \u0417\u0430\u0432\u0438\u0441\u0438\u043c\u043e\u0441\u0442\u0438 \u043f\u0440\u043e\u0435\u043a\u0442\u0430
-report.dependencies.unamed                                         = \u041d\u0435\u0438\u0437\u0432\u0435\u0441\u0442\u043d\u0430\u044f
+report.dependencies.unnamed                                        = \u041d\u0435\u0438\u0437\u0432\u0435\u0441\u0442\u043d\u0430\u044f
 report.dependencies.transitive.intro                               = \u0417\u0434\u0435\u0441\u044c \u043f\u0440\u0438\u0432\u043e\u0434\u0438\u0442\u0441\u044f \u043b\u0438\u0441\u0442 \u0442\u0440\u0430\u043d\u0437\u0438\u0442\u0438\u0432\u043d\u044b\u0445 \u0437\u0430\u0432\u0438\u0441\u0438\u043c\u043e\u0441\u0442\u0435\u0439 \u043f\u0440\u043e\u0435\u043a\u0442\u0430.
 report.dependencies.transitive.nolist                              = \u042d\u0442\u043e\u0442 \u043f\u0440\u043e\u0435\u043a\u0442 \u043d\u0435 \u0438\u043c\u0435\u0435\u0442 \u0442\u0440\u0430\u043d\u0437\u0438\u0442\u0438\u0432\u043d\u044b\u0445 \u0437\u0430\u0432\u0438\u0441\u0438\u043c\u043e\u0441\u0442\u0435\u0439.
 report.dependencies.transitive.title                               = \u0422\u0440\u0430\u043d\u0437\u0438\u0442\u0438\u0432\u043d\u044b\u0435 \u0437\u0430\u0432\u0438\u0441\u0438\u043c\u043e\u0441\u0442\u0438 \u043f\u0440\u043e\u0435\u043a\u0442\u0430
