--- a/src/main/resources/project-info-report_sv.properties
+++ b/src/main/resources/project-info-report_sv.properties
@@ -88,7 +88,7 @@ report.dependencies.repo.locations.column.snapshot                 = Snapshot
 report.dependencies.repo.locations.column.url                      = URL
 report.dependencies.repo.locations.title                           = Beroendens f\u00f6rvaringsplatser
 report.dependencies.title                                          = Projektberoenden
-report.dependencies.unamed                                         = Namnl\u00f6s
+report.dependencies.unnamed                                        = Namnl\u00f6s
 report.dependencies.transitive.intro                               = F\u00f6ljande \u00e4r en lista \u00f6ver projektets transitiva beroenden. Ett transitivt beroende \u00e4r ett beroende fr\u00e5n n\u00e5got av projektets beroenden.
 report.dependencies.transitive.nolist                              = Det finns inga transitiva beroenden f\u00f6r detta projekt.
 report.dependencies.transitive.title                               = Transitiva beroenden f\u00f6r projektet
