--- a/src/main/resources/project-info-report_zh_CN.properties
+++ b/src/main/resources/project-info-report_zh_CN.properties
@@ -78,7 +78,7 @@ report.dependencies.repo.locations.column.snapshot                 = \u5FEB\u716
 report.dependencies.repo.locations.column.url                      = URL
 report.dependencies.repo.locations.title                           = \u4F9D\u8D56\u4ED3\u5E93\u5730\u5740
 report.dependencies.title                                          = \u9879\u76EE\u4F9D\u8D56
-report.dependencies.unamed                                         = \u672A\u547D\u540D
+report.dependencies.unnamed                                        = \u672A\u547D\u540D
 report.dependencies.transitive.intro                               = \u4EE5\u4E0B\u662F\u672C\u9879\u76EE\u7684\u4F20\u9012\u4F9D\u8D56\u5217\u8868\u3002\u4F20\u9012\u4F9D\u8D56\u662F\u9879\u76EE\u4F9D\u8D56\u7684\u4F9D\u8D56\uFF1A
 report.dependencies.transitive.nolist                              = \u672C\u9879\u76EE\u6CA1\u6709\u9700\u8981\u7684\u4F20\u9012\u4F9D\u8D56\u3002
 report.dependencies.transitive.title                               = \u9879\u76EE\u4F20\u9012\u4F9D\u8D56
