--- a/src/main/resources/project-info-report_zh_TW.properties
+++ b/src/main/resources/project-info-report_zh_TW.properties
@@ -87,7 +87,7 @@ report.dependencies.repo.locations.column.snapshot                 = \u5feb\u716
 report.dependencies.repo.locations.column.url                      = URL
 report.dependencies.repo.locations.title                           = \u4f9d\u8cf4\u8caf\u85cf\u5eab\u4f4d\u7f6e (Dependency Repository Locations)
 report.dependencies.title                                          = \u5c08\u6848\u4f9d\u8cf4 (Project Dependencies)
-report.dependencies.unamed                                         = \u672a\u547d\u540d
+report.dependencies.unnamed                                        = \u672a\u547d\u540d
 report.dependencies.transitive.intro                               = \u4ee5\u4e0b\u662f\u672c\u5c08\u6848\u7684\u50b3\u905e\u4f9d\u8cf4\u5217\u8868\u3002\u50b3\u905e\u4f9d\u8cf4\u662f\u672c\u5c08\u6848\u4f9d\u8cf4\u7684\u4f9d\u8cf4\u3002
 report.dependencies.transitive.nolist                              = \u672c\u5c08\u6848\u6c92\u6709\u50b3\u905e\u4f9d\u8cf4\u7684\u9700\u8981\u3002
 report.dependencies.transitive.title                               = \u5c08\u6848\u50b3\u905e\u4f9d\u8cf4 (Project Transitive Dependencies)
