--- a/src/main/resources/project-info-report_ko.properties
+++ b/src/main/resources/project-info-report_ko.properties
@@ -78,7 +78,7 @@ report.dependencies.repo.locations.column.snapshot                 = \uc2a4\ub0c
 report.dependencies.repo.locations.column.url                      = URL
 report.dependencies.repo.locations.title                           = \uc758\uc874\ubb3c \ub808\ud30c\uc9c0\ud1a0\ub9ac \uc704\uce58
 report.dependencies.title                                          = \ud504\ub85c\uc81d\ud2b8 \uc758\uc874\ubb3c\ub4e4
-report.dependencies.unamed                                         = \uba85\uba85 \uc548\ub428
+report.dependencies.unnamed                                        = \uba85\uba85 \uc548\ub428
 report.dependencies.transitive.intro                               = \ub2e4\uc74c\uc740 \uc774 \ud504\ub85c\uc81d\ud2b8\uc758 \uc804\uc774 \uc758\uc874\ubb3c (Transitive Dependencies) \ubaa9\ub85d\uc785\ub2c8\ub2e4. \uc804\uc774 \uc758\uc874\ubb3c\ub4e4\uc740 \ud504\ub85c\uc81d\ud2b8 \uc758\uc874\ubb3c\ub4e4\uc758 \uc758\uc874\ubb3c\ub4e4\uc785\ub2c8\ub2e4.
 report.dependencies.transitive.nolist                              = \uc774 \ud504\ub85c\uc81d\ud2b8\uc758 \uc804\uc774 \uc758\uc874\ubb3c\uc774 \ud558\ub098\ub3c4 \uc5c6\uc2b5\ub2c8\ub2e4.
 report.dependencies.transitive.title                               = \ud504\ub85c\uc81d\ud2b8 \uc804\uc774 \uc758\uc874\ubb3c
